RESOLVED FIXED184692
Fix entitlements and sandboxing for iphoneminimalsimulator
https://bugs.webkit.org/show_bug.cgi?id=184692
Summary Fix entitlements and sandboxing for iphoneminimalsimulator
Jer Noble
Reported 2018-04-17 07:59:23 PDT
Fix entitlements and sandboxing for iphoneminimalsimulator
Attachments
Patch (13.87 KB, patch)
2018-04-17 08:03 PDT, Jer Noble
no flags
Archive of layout-test-results from ews200 for win-future (12.79 MB, application/zip)
2018-04-17 10:16 PDT, EWS Watchlist
no flags
Patch (17.83 KB, patch)
2018-04-18 08:57 PDT, Jer Noble
no flags
Patch for landing (19.04 KB, patch)
2018-04-18 11:56 PDT, Jer Noble
no flags
Patch for landing (19.01 KB, patch)
2018-04-18 13:28 PDT, Jer Noble
no flags
Jer Noble
Comment 1 2018-04-17 08:03:06 PDT
Radar WebKit Bug Importer
Comment 2 2018-04-17 08:58:58 PDT
EWS Watchlist
Comment 3 2018-04-17 10:16:48 PDT
Comment on attachment 338112 [details] Patch Attachment 338112 [details] did not pass win-ews (win): Output: http://webkit-queues.webkit.org/results/7345301 New failing tests: http/tests/security/contentSecurityPolicy/userAgentShadowDOM/allow-video.html
EWS Watchlist
Comment 4 2018-04-17 10:16:59 PDT
Created attachment 338129 [details] Archive of layout-test-results from ews200 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews200 Port: win-future Platform: CYGWIN_NT-6.1-2.9.0-0.318-5-3-x86_64-64bit
Jer Noble
Comment 5 2018-04-18 08:57:31 PDT
Jer Noble
Comment 6 2018-04-18 11:56:17 PDT
Created attachment 338236 [details] Patch for landing
WebKit Commit Bot
Comment 7 2018-04-18 13:01:23 PDT
Comment on attachment 338236 [details] Patch for landing Rejecting attachment 338236 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 338236, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/7361459
Jer Noble
Comment 8 2018-04-18 13:28:51 PDT
Created attachment 338254 [details] Patch for landing
WebKit Commit Bot
Comment 9 2018-04-18 14:06:55 PDT
Comment on attachment 338254 [details] Patch for landing Clearing flags on attachment: 338254 Committed r230778: <https://trac.webkit.org/changeset/230778>
WebKit Commit Bot
Comment 10 2018-04-18 14:06:57 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.